--- a/third-harmonic.ipynb
+++ b/third-harmonic.ipynb
@@ -5,7 +5,7 @@
    "id": "8c805668-4561-4ec0-b396-d4236d37241b",
    "metadata": {},
    "source": [
-    "# Problem 2: Numerical simulation of third-harmonic generation \n",
+    "# Numerical simulation of third-harmonic generation \n",
     "We have tried to numerically solve the coupled amplitude equations by dividing the domain into small steps(1000 steps taken here for a length of 1 unit). The differential is approximated to the difference in values as the step size is 'small'. \n",
     "Therefore, we calculate the values of $A_w$ and $A_{3w}$ at each step by using the difference equation derived from the differential equation. \n",
     "$$\\Delta A_{3w} = i \\kappa A_w^3 e^{i\\Delta kz} \\Delta z$$\n",
